# proto/gen/api/v1/class_service_grpc.pb.go
@@ -1,0 +1,288 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.1
+// - protoc             (unknown)
+// source: api/v1/class_service.proto
+
+package apiv1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+	emptypb "google.golang.org/protobuf/types/known/emptypb"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	ClassService_CreateClass_FullMethodName = "/memos.api.v1.ClassService/CreateClass"
+	ClassService_GetClass_FullMethodName    = "/memos.api.v1.ClassService/GetClass"
+	ClassService_ListClasses_FullMethodName = "/memos.api.v1.ClassService/ListClasses"
+	ClassService_UpdateClass_FullMethodName = "/memos.api.v1.ClassService/UpdateClass"
+	ClassService_DeleteClass_FullMethodName = "/memos.api.v1.ClassService/DeleteClass"
+)
+
+// ClassServiceClient is the client API for ClassService service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// ClassService provides API for managing classes.
+type ClassServiceClient interface {
+	// CreateClass creates a new class.
+	CreateClass(ctx context.Context, in *CreateClassRequest, opts ...grpc.CallOption) (*Class, error)
+	// GetClass retrieves a class by name.
+	GetClass(ctx context.Context, in *GetClassRequest, opts ...grpc.CallOption) (*Class, error)
+	// ListClasses lists classes based on filters.
+	ListClasses(ctx context.Context, in *ListClassesRequest, opts ...grpc.CallOption) (*ListClassesResponse, error)
+	// UpdateClass updates a class.
+	UpdateClass(ctx context.Context, in *UpdateClassRequest, opts ...grpc.CallOption) (*Class, error)
+	// DeleteClass deletes a class.
+	DeleteClass(ctx context.Context, in *DeleteClassRequest, opts ...grpc.CallOption) (*emptypb.Empty, error)
+}
+
+type classServiceClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewClassServiceClient(cc grpc.ClientConnInterface) ClassServiceClient {
+	return &classServiceClient{cc}
+}
+
+func (c *classServiceClient) CreateClass(ctx context.Context, in *CreateClassRequest, opts ...grpc.CallOption) (*Class, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Class)
+	err := c.cc.Invoke(ctx, ClassService_CreateClass_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *classServiceClient) GetClass(ctx context.Context, in *GetClassRequest, opts ...grpc.CallOption) (*Class, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Class)
+	err := c.cc.Invoke(ctx, ClassService_GetClass_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *classServiceClient) ListClasses(ctx context.Context, in *ListClassesRequest, opts ...grpc.CallOption) (*ListClassesResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(ListClassesResponse)
+	err := c.cc.Invoke(ctx, ClassService_ListClasses_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *classServiceClient) UpdateClass(ctx context.Context, in *UpdateClassRequest, opts ...grpc.CallOption) (*Class, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Class)
+	err := c.cc.Invoke(ctx, ClassService_UpdateClass_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *classServiceClient) DeleteClass(ctx context.Context, in *DeleteClassRequest, opts ...grpc.CallOption) (*emptypb.Empty, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(emptypb.Empty)
+	err := c.cc.Invoke(ctx, ClassService_DeleteClass_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// ClassServiceServer is the server API for ClassService service.
+// All implementations must embed UnimplementedClassServiceServer
+// for forward compatibility.
+//
+// ClassService provides API for managing classes.
+type ClassServiceServer interface {
+	// CreateClass creates a new class.
+	CreateClass(context.Context, *CreateClassRequest) (*Class, error)
+	// GetClass retrieves a class by name.
+	GetClass(context.Context, *GetClassRequest) (*Class, error)
+	// ListClasses lists classes based on filters.
+	ListClasses(context.Context, *ListClassesRequest) (*ListClassesResponse, error)
+	// UpdateClass updates a class.
+	UpdateClass(context.Context, *UpdateClassRequest) (*Class, error)
+	// DeleteClass deletes a class.
+	DeleteClass(context.Context, *DeleteClassRequest) (*emptypb.Empty, error)
+	mustEmbedUnimplementedClassServiceServer()
+}
+
+// UnimplementedClassServiceServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedClassServiceServer struct{}
+
+func (UnimplementedClassServiceServer) CreateClass(context.Context, *CreateClassRequest) (*Class, error) {
+	return nil, status.Error(codes.Unimplemented, "method CreateClass not implemented")
+}
+func (UnimplementedClassServiceServer) GetClass(context.Context, *GetClassRequest) (*Class, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetClass not implemented")
+}
+func (UnimplementedClassServiceServer) ListClasses(context.Context, *ListClassesRequest) (*ListClassesResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method ListClasses not implemented")
+}
+func (UnimplementedClassServiceServer) UpdateClass(context.Context, *UpdateClassRequest) (*Class, error) {
+	return nil, status.Error(codes.Unimplemented, "method UpdateClass not implemented")
+}
+func (UnimplementedClassServiceServer) DeleteClass(context.Context, *DeleteClassRequest) (*emptypb.Empty, error) {
+	return nil, status.Error(codes.Unimplemented, "method DeleteClass not implemented")
+}
+func (UnimplementedClassServiceServer) mustEmbedUnimplementedClassServiceServer() {}
+func (UnimplementedClassServiceServer) testEmbeddedByValue()                      {}
+
+// UnsafeClassServiceServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to ClassServiceServer will
+// result in compilation errors.
+type UnsafeClassServiceServer interface {
+	mustEmbedUnimplementedClassServiceServer()
+}
+
+func RegisterClassServiceServer(s grpc.ServiceRegistrar, srv ClassServiceServer) {
+	// If the following call panics, it indicates UnimplementedClassServiceServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&ClassService_ServiceDesc, srv)
+}
+
+func _ClassService_CreateClass_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CreateClassRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClassServiceServer).CreateClass(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClassService_CreateClass_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClassServiceServer).CreateClass(ctx, req.(*CreateClassRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ClassService_GetClass_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetClassRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClassServiceServer).GetClass(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClassService_GetClass_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClassServiceServer).GetClass(ctx, req.(*GetClassRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ClassService_ListClasses_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListClassesRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClassServiceServer).ListClasses(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClassService_ListClasses_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClassServiceServer).ListClasses(ctx, req.(*ListClassesRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ClassService_UpdateClass_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(UpdateClassRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClassServiceServer).UpdateClass(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClassService_UpdateClass_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClassServiceServer).UpdateClass(ctx, req.(*UpdateClassRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _ClassService_DeleteClass_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(DeleteClassRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ClassServiceServer).DeleteClass(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: ClassService_DeleteClass_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ClassServiceServer).DeleteClass(ctx, req.(*DeleteClassRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// ClassService_ServiceDesc is the grpc.ServiceDesc for ClassService service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var ClassService_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "memos.api.v1.ClassService",
+	HandlerType: (*ClassServiceServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "CreateClass",
+			Handler:    _ClassService_CreateClass_Handler,
+		},
+		{
+			MethodName: "GetClass",
+			Handler:    _ClassService_GetClass_Handler,
+		},
+		{
+			MethodName: "ListClasses",
+			Handler:    _ClassService_ListClasses_Handler,
+		},
+		{
+			MethodName: "UpdateClass",
+			Handler:    _ClassService_UpdateClass_Handler,
+		},
+		{
+			MethodName: "DeleteClass",
+			Handler:    _ClassService_DeleteClass_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "api/v1/class_service.proto",
+}
